DummySite/controller/src/main/resources/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "[[${name}]]"
  namespace: "[[${namespace}]]"
  labels:
    dummySite: "[[${label}]]"
    app: dummysites
spec:
  replicas: 1
  selector:
    matchLabels:
      dummySite: "[[${label}]]"
  template:
    metadata:
      labels:
        dummySite: "[[${label}]]"
    spec:
      volumes:
        - name: content
      containers:
        - name: server
          image: nginx:alpine
          volumeMounts:
            - name: content
              mountPath: /usr/share/nginx/html/
          resources:
            limits:
              cpu: 250m
              memory: 64M
            requests:
              cpu: 50m
              memory: 32M
