DummySite/controller/src/main/resources/service.yml
apiVersion: v1
kind: Service
metadata:
  name: "[[${name}]]"
  namespace: "[[${namespace}]]"
  labels:
    dummySite: "[[${label}]]"
    app: dummysites
spec:
  ports:
  - name: http
    port: 80
  selector:
    dummySite: "[[${label}]]"
