DummySite/controller/src/main/resources/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "[[${name}]]"
  namespace: "[[${namespace}]]"
  labels:
    dummySite: "[[${label}]]"
    app: dummysites
spec:
  rules:
  - http:
      paths:
      - path: "/[[${path}]]"
        pathType: Prefix
        backend:
          service:
            name: "[[${service_name}]]"
            port:
              number: 80
